--- a/ALS.ipynb
+++ b/ALS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtbZvvg4io17D7wA/INnaw",
+      "authorship_tag": "ABX9TyND02MileF+ny3ymCG+dyv/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4926,6 +4926,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install nbstripout\n"
+      ],
+      "metadata": {
+        "id": "e1u7cebAPdUt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd https://github.com/asalem2/E-Commerce-Product-Recommendation-System/blob/main/ALS.ipynb\n",
+        "nbstripout --install\n"
+      ],
+      "metadata": {
+        "id": "_VzCnjaqPdgh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "git add YourNotebook.ipynb\n",
+        "git commit -m \"Strip out widget metadata\"\n",
+        "git push\n"
+      ],
+      "metadata": {
+        "id": "kJviyiRMPeCm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
