final code updates

--- a/kmeans_chris_sanfilippo.ipynb
+++ b/kmeans_chris_sanfilippo.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "8cAtDeQI6UXk",
         "colab": {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "xthyXlfN6XQy"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "D-QDQtbtjXAl"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "f_2jIJ17koyG"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,6 +86,7 @@
       "source": [
         "#Here I'm setting up the data frame and loading the dataset\n",
         "#I'm defining the number of rows we want to read.\n",
+        "#We limited the amount of data due to issues with collab created. The dataset was large enough that this was not an issue.\n",
         "df = pd.read_csv('/content/drive/MyDrive/2020-Apr.csv', nrows=10000000)\n",
         "df"
       ],
@@ -97,7 +98,7 @@
         },
         "outputId": "0678291f-936e-4b94-ebc2-6cf60fe038ca"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +602,7 @@
         "id": "Jt8zkE_KpQmd",
         "outputId": "12e8d643-6b58-4763-9976-56103d7c181b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +631,7 @@
         },
         "outputId": "dce4a1eb-899d-4643-fa21-37b99d5fee55"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +659,7 @@
         },
         "outputId": "db08b911-9e8a-409d-a5a6-6de09ecd2dfc"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,6 +689,7 @@
       "cell_type": "code",
       "source": [
         "#Here I'm dropping some of the features or columns (event_time and user_session)\n",
+        "#These features were dropped because these features did not contribute much in our prediction model.\n",
         "df = df.drop(columns = ['event_time', 'user_session'])\n",
         "df"
       ],
@@ -699,7 +701,7 @@
         },
         "outputId": "e7a2a1f6-8b49-4e9a-ffe2-06cdeb907908"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1156,8 +1158,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#These are the main features. For each user event I'm grouping by to get the count of events.\n",
-        "#The goal here is to total frequency of events, the average spends, number of unique products, and number of unique brands.\n",
+        "#Feature Engineering\n",
+        "#This section develops the main features which we have included for training the model.\n",
+        "#By creating these new metrics, we are able to more accurately train the model since they were not readily available in the dataset.\n",
+        "#For each user event I've grouped by them by count of events.\n",
+        "#Event Frequency is the total count of events by user.\n",
+        "#Unique Products is the number of unique products the user interacted with.\n",
+        "#Unique Brands is the number of unique brands the user interacted with.\n",
+        "#Average Spend is the average spend for products for each user.\n",
         "user_features = df.groupby('user_id').agg(\n",
         "    event_frequency=('event_type', 'count'),\n",
         "    unique_products=('product_id', 'nunique'),\n",
@@ -1174,7 +1182,7 @@
         },
         "outputId": "1d334d2f-1a7e-4ea4-d0be-6b851b83e6f0"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1607,7 +1615,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Here we are create scaling the dataset using the standardScaler\n",
+        "#Here we are scaling the dataset using standardScaler\n",
         "features = ['event_frequency', 'unique_products', 'unique_brands', 'average_spend']\n",
         "\n",
         "scaler = StandardScaler()\n",
@@ -1616,14 +1624,22 @@
       "metadata": {
         "id": "Y4Lo5N_q6mjX"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Here we are experiementing with different K models to determine how many clusters they come up with.\n",
-        "#We are calculating inertia and storing it. It's used to calculate how the model performed.\n",
+        "#Training the Model\n",
+        "#Here we are experiementing with different K models to determine how many clusters we come up with.\n",
+        "#We are calculating inertia and storing it. It's used to calculate how the model performs.\n",
+        "\n",
+        "#In the chart SSE is the sum of squared error.\n",
+        "#In every cluster there is an optimal point.\n",
+        "#We are limimiting the K range to 1-15\n",
+        "#We are summaring the SSE for each K value\n",
+        "#If we increase K the SS decreases\n",
+        "\n",
         "sse = []\n",
         "K_range = range(1, 15)\n",
         "\n",
@@ -1647,7 +1663,7 @@
         },
         "outputId": "89810ee8-49ca-4d24-fdd6-80335a00471e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1665,6 +1681,8 @@
       "cell_type": "code",
       "source": [
         "#Here I'm using the KneeLocator to determine the optimal K\n",
+        "#This Kneelocator is part of the Kneed library.\n",
+        "#It's called then Knee locator because it's searching for the value at which the chart begins to drop downards, like a human Knee.\n",
         "kl = KneeLocator(K_range, sse, curve=\"convex\", direction=\"decreasing\")\n",
         "print(\"Optimal k:\", kl.elbow)"
       ],
@@ -1675,7 +1693,7 @@
         },
         "outputId": "0a99235e-fe6a-45f7-e338-46f44a653fa4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1689,10 +1707,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#Based on the finding that 5 is the optimal K, we will get more details.\n",
+        "#Based on the finding that 5 is the optimal K, we will get more details about each cluster.\n",
         "kmeans = KMeans(n_clusters=kl.elbow, random_state=42)\n",
+        "#Here we are creating the clusers.\n",
         "user_features['cluster'] = kmeans.fit_predict(scaled_data)\n",
-        "user_features"
+        "user_features\n",
+        "#The cluster column shows which cluster the user belongs to."
       ],
       "metadata": {
         "id": "qBt8lMUg6qAp",
@@ -1702,7 +1722,7 @@
         },
         "outputId": "b38b0d55-52e9-48e0-ad1a-b75542cc6bac"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2159,7 +2179,7 @@
         },
         "outputId": "c9ccf7de-254b-4935-90b6-07cb59168f3b"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2260,7 +2280,7 @@
         },
         "outputId": "ffeaddda-a482-4552-8a5e-9c100fc7c963"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2308,6 +2328,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Here we are creating the function which will be called further below in the code.\n",
+        "#This function will allow us to find which cluster a user belongs to.\n",
         "def find_similar_cluster(new_user_features, scaler, kmeans_model):\n",
         "    scaled_new_user_data = scaler.transform(new_user_features)\n",
         "    predicted_cluster = kmeans_model.predict(scaled_new_user_data)\n",
@@ -2317,13 +2339,14 @@
       "metadata": {
         "id": "d91R_tmzn4Od"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Read 500k data from the rest of the data to choose a random user to recommend products\n",
+        "#Testing\n",
+        "# Here we are reading from the remaining dataset (Test group) to select a later seect a single user for testing and recommending products.\n",
         "df_remaining = pd.read_csv('/content/drive/MyDrive/2020-Apr.csv', skiprows=10000001,  names=headers, nrows=1000000)\n",
         "df_remaining.head()"
       ],
@@ -2335,7 +2358,7 @@
         "id": "wkd_oxeWn6jL",
         "outputId": "68479d5d-20f2-4bf7-d4e6-15363af086fc"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2681,6 +2704,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Here we dropping two feartures from our testing group.\n",
         "df_remaining = df_remaining.drop(columns = ['event_time', 'user_session'])\n",
         "df_remaining"
       ],
@@ -2692,7 +2716,7 @@
         "id": "yeunSVeYn6lY",
         "outputId": "4db3f65d-f2aa-47aa-afaf-38d5d7310b11"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3149,6 +3173,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Testing\n",
+        "#Here we are selecting a single user from the testing group\n",
         "random_user_id = df_remaining['user_id'].sample(1).iloc[0]\n",
         "new_user_data = df_remaining[df_remaining['user_id'] == random_user_id].copy()\n",
         "\n",
@@ -3159,6 +3185,7 @@
         "    average_spend=('price', 'mean')\n",
         ").reset_index()\n",
         "\n",
+        "#Here we are calling the function we created to check which cluster the user belongs to\n",
         "predicted_cluster = find_similar_cluster(new_user_features_df[features], scaler, kmeans)\n",
         "\n",
         "print(f\"New user ID: {random_user_id}\")\n",
@@ -3171,7 +3198,7 @@
         "id": "0KvSjKwgn9oD",
         "outputId": "2f2d7eaa-e6dd-4ab0-d323-2dd2e54d1a71"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3187,21 +3214,41 @@
     {
       "cell_type": "code",
       "source": [
+        "#After getting the cluster name which the user belongs to we are recommending products for this user.\n",
         "cluster_users = user_features[user_features['cluster'] == predicted_cluster]['user_id']\n",
         "cluster_data = df[df['user_id'].isin(cluster_users)]\n",
         "\n",
+        "#Here we are getting the popular products for that cluster.\n",
         "popular_products = cluster_data['product_id'].value_counts().reset_index()\n",
+        "#Here we are naming the columns for product ID and Count for the recommended products\n",
         "popular_products.columns = ['product_id', 'count']\n",
         "\n",
+        "#Here we are filtering out whether or not the user has purchases those recommended products.\n",
         "user_purchased_products = new_user_data[new_user_data['event_type'] == 'purchase']['product_id'].unique()\n",
         "print(\"User's already purchased products: \", user_purchased_products)\n",
+        "\n",
+        "#If the user has already bought them we will not recommended them. We will remove them from the list of recommended products.\n",
+        "#This is what makes the recommendation system more useful for e-commerce.\n",
         "popular_products = popular_products[~popular_products['product_id'].isin(user_purchased_products)]\n",
         "\n",
+        "#Here we are selecting how many recommened products to show.\n",
         "top_n = 10\n",
+        "#Here we are selecting the top ten recommended products.\n",
         "recommended_products = popular_products.head(top_n)\n",
         "\n",
+        "#Here we are printing the recommended products.\n",
         "print(f\"\\nRecommended products for the new user (from cluster {predicted_cluster}):\")\n",
-        "display(recommended_products)"
+        "display(recommended_products)\n",
+        "\n",
+        "#Analyzing Results\n",
+        "#In the results, the Count is how many times that product was viewed or purchased across all users in that cluster.\n",
+        "#In the resuts, the product_id is the product we are recommending to the users.\n",
+        "\n",
+        "#Real World Deployment\n",
+        "#In a real world deployment, we would integrate this recommendation system into an e-commerce website.\n",
+        "#When a user visits a page on the e-commerce site, we will check this system to return a more helpful list of products.\n",
+        "#The more accuractly and strategically we can develop that list of products the more we can help users and website sales.\n",
+        "#In a future project we can get a dataset which maps the product ID to the product names."
       ],
       "metadata": {
         "colab": {
@@ -3211,7 +3258,7 @@
         "id": "Hl7sLq6zn9vT",
         "outputId": "002e9aa6-9693-4a28-f5dc-01726eeb66cc"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
